Version 18   Live Server Fixes

--Gun price up to 1200 to strengthen Pit Bulls somewhat, and Powered Door price
  down to 600 to compensate for door drawbacks.

--Chills are now put on all houses player entered in the last hour when player
  dies, regardless of where player dies.  Player is haunted by what they did
  during the last hour of their past life.




Version 18   2013-August-27

--Fixed glitch causing visibal animal position jump-back after robber death.





Version 17   2013-August-27

--Fixed bug that was causing useLargestWindow setting to be ignored.  Now
  window size can be set by user (thanks Colorfusion).

--Fixed vision 'leak' through diagonals.

--Fixed directions that animals face when they can't see you so that they don't
  suddenly jump orientations when they come into view.

--Added a club tool (bludgeon functionality of the crowbar, without the
  door-opening capabilities, allowing it to be cheaper).  Removed
  mostly-useless voltage detector to make room for it.

--Changed so that all still-living animals jump back to their starting
  positions, if possible, post-robbery.





Version 16   Live Server Fixes

--Changed so that every house earns something in each pay interval (a minimum
  fraction of the maximum possible pay).

--Quadrupled all tool prices.

--Changed tool and tile prices according to a new four-tiered pricing model
  with a fixed build-cost/bypass-cost ratio for everything (pricing theory).

--Changed bypass-cost theory for mobile bottlenecks (pit bulls).  Direct
  bypass (gun) now costs 1x, and disabling (meat) costs 1/8x.





Version 16   2013-August-21

--Added support for web proxies (thanks Florian Yusuf Ali).

--Fixed visibility computation mismatch across platforms (caused by floating
  point round-off inconsistencies between platforms) by switching to an integer
  visibility computation.  This was causing server-side simulation of robberies
  to fail in rare cases (thanks Raymond Koo).
